# math_ai

./: README.md  app.py  pyproject.toml
pages/: 10_Minibatch_크기의_장단점.py  1_베이즈정리.py  2_조건부확률과_주변확률.py  3_다변수함수_연쇄법칙.py  4_정규분포_난수생성.py  5_테일러급수_설명.py  6_확률변수의_독립.py  7_공액성_Conjugacy.py  8_충분통계량.py  9_그래디언트_계산.py
